Fix layout
Added date to headers and lowered font weight to 400 to fix layout issues

--- a/style.css
+++ b/style.css
@@ -3506,12 +3506,13 @@ New Jutut Page
 }
 
 #main-jutut .content-small .info {
-	padding: 0.5em;
+	padding: 0.3em 0.5em;
 }
 
 #main-jutut .content-small .info h2 {
-	font-size: 16px;
-	font-family: 'Exo 2', sans-serif; 
+	font-size: 15px;
+	font-family: 'Exo 2', sans-serif;
+	font-weight: 400; 
 }
 
 #main-jutut .content-small .info p {
